INDEX USUARIOS MODIFICACION BOTONES - CONVERTER ROL - REGISTRAR USUARIOS ERROR ROL* SENA 07-02-2019

--- a/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
@@ -79,7 +79,7 @@
                                                 </div>
                                                 <div class="col-6">
                                                     <h:inputText id="documento" value="#{usuarioController.nuevoUsuario.documento}" 
-                                                                 a:type="text"
+                                                                 a:type="number"
                                                                  class="form-control" 
                                                                  a:placeholder="Numero de documento" 
                                                                  a:required=""/>
