--- a/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
@@ -23,17 +23,18 @@
                             <h:form>
                                 <div class="card-header card-header-success colorc">
                                     <div class="row">
-                                        <div class="col-9">
+                                        <div class="col-6">
                                             <h4 class="card-title">Usuarios del Sistema</h4>
                                             <p class="card-category">Aquí encontraras todos los usuarios registrados en el sistema.</p>
+                                            
+                                        </div>
+                                        <div class="col-6">                                          
                                             <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#{reportesController.export()}" value="PDF" >
                                                 <i class="fas fa-file-pdf"></i>
                                             </h:commandLink>&nbsp;&nbsp;
-                                            <h:commandLink class="card-category btn btn-success btn-flat m-b-30 m-t-30" action="#{reportesController.exportPDF()}" value="EXCEL">
+                                            <h:commandLink class="card-category btn btn-primary btn-flat m-b-30 m-t-30" action="#{reportesController.exportPDF()}" value="EXCEL">
                                                 <i class="fas fa-file-excel"></i>
-                                            </h:commandLink>
-                                        </div>
-                                        <div class="col-3">
+                                            </h:commandLink>&nbsp;&nbsp;
                                             <a class="btn btn-info" href="registrar.xhtml" >                                                     
                                                 <i class="material-icons movericon">person_add</i>
                                                 <span>Añadir Usuario</span>
@@ -101,7 +102,7 @@
                                             <h:inputText id="nombres" value="#{usuarioController.usuarioSeleccionado.nombres}"
                                                          a:type="text" 
                                                          class="form-control"  
-                                                         a:placeholder="Nombres" required="true"/>
+                                                         a:placeholder="Nombres" a:required=""/>
                                         </div>
                                         <div class="col-6">
                                             <h:inputText id="apellidos" value="#{usuarioController.usuarioSeleccionado.apellidos}" 
