ingresamo texto de prueba en index

--- a/digital_events_repository/web/SI/index.xhtml
+++ b/digital_events_repository/web/SI/index.xhtml
@@ -9,7 +9,7 @@
 
     <ui:define name="content">
         
-        
+        <!--HOLA ESTE ES UN TEXTO DE PRUEBA REPOSITORIO-->
 
         <h:panelGroup layout="block" rendered="#{sessionController.rol.id eq 1}">            
             <ui:include src="/WEB-INF/includes/dashboard/administrador.xhtml"/>
